--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,7 +26,7 @@ spring:
     password: ${DB_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
@@ -36,6 +36,7 @@ cloud:
   aws:
     s3:
       bucket: ${S3_BUCKET}
+      domain-name: ${DOMAIN_NAME}
     region.static: ${S3_REGION_STATIC}
     credentials:
       access-key: ${S3_ACCESS_KEY}
