--- a/.gitignore
+++ b/.gitignore
@@ -44,4 +44,7 @@ secret.yaml
 mysql-secret.yaml
 spring-deployment.yaml
 application.yaml
-application-test.yaml
+current-test.yaml
+report.html
+report.json
+user_ids.csv
