--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,10 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.redisson/redisson
 	implementation group: 'org.redisson', name: 'redisson', version: '3.34.1'
 
+	// Spring Kafka
+	implementation 'org.springframework.cloud:spring-cloud-stream'
+	implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka'
+
 }
 
 dependencyManagement {
