--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-stream'
 	implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka'
 
+	implementation("org.springframework.boot:spring-boot-starter-actuator")
+
 	// Test Mockito
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
 	testImplementation 'org.mockito:mockito-core:5.5.0'
