fix: 닉네임 중복 확인

--- a/k8s/mysql-deployment.yaml
+++ b/k8s/mysql-deployment.yaml
@@ -12,6 +12,8 @@ spec:
       labels:
         app: mysql
     spec:
+      nodeSelector:
+        node-role: backend
       containers:
         - name: mysql
           image: mysql:latest
