--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
 	// JWT
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
